// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyOverview /> renders correctly with error 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Quotes
    .
  </div>,
]
`;

exports[`<MyOverview /> renders correctly with loading 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="row:bg-lighter -thin"
  >
    <div
      className="row:results"
    >
      <div
        className="loading -large"
      >
        <svg
          className="loading--svg"
          viewBox="-75 -75 150 150"
        >
          <circle
            className="loading--stroke"
            cx="0"
            cy="0"
            r="37.5"
          />
        </svg>
      </div>
    </div>
  </div>,
]
`;

exports[`<MyOverview /> renders orders correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Orders
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Orders
    .
  </div>,
]
`;

exports[`<MyOverview /> renders quotes correctly with data 1`] = `
Array [
  <div
    className="row:title"
  >
    <h1
      className="heading -black -xlarge"
      data-testid="my-details-heading"
    >
      My 
      Quotes
    </h1>
  </div>,
  <div
    className="dpd-content"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "minHeight": "40rem",
      }
    }
  >
    You have no 
    Quotes
    .
  </div>,
]
`;
